# Projeto-2-MC714

./: README_DEPLOY.md  TESTE_LOCAL.md  pyproject.toml
scripts/: deploy.sh  start_nodes.sh
src/: election.py  lamport.py  network.py  node.py
